syntax = "proto3";

package user;
option go_package = "pb";

import "user.proto";

service UserQuery {
    // ユーザーを取得する
    rpc Get(UserGetRequest) returns (UserGetResponse);
}

message UserGetRequest {
    uint64 user_id = 1;
}

message UserGetResponse {
    User user = 1;
}
